@@ -3,8 +3,8 @@
   <groupId>JenkinsTrigger</groupId>
   <artifactId>JenkinsTrigger</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-  
+  <packaging>jar</packaging>
+
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -26,6 +26,14 @@
 			<version>3.11.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.1</version>
+    <scope>test</scope>
+</dependency>
+		
 		
 		<dependency>
 			<groupId>net.masterthought</groupId>
@@ -35,27 +43,60 @@
 		
 	</dependencies>
 	<build>
+	<pluginManagement>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
+			 <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <version>3.0.0</version>
+  <executions>
+    <execution>
+    <phase>test</phase>
+      <goals>
+        <goal>java</goal>
+      </goals>
+    </execution>
+  </executions>
+  <configuration>
+    <classpathScope>test</classpathScope>
+    <mainClass>Demo.DemoTest</mainClass>
+  </configuration>
+</plugin>
+     <!--  
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+      <configuration>
+      <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+      <testFailureIgnore>true</testFailureIgnore>
+      <useSystemClassLoader>false</useSystemClassLoader>
+      <includes>
+      <include>**/*Test.java</include>
+      </includes>
+      <parallel>methods</parallel>
+      <threadCount>2</threadCount>
+      
+      </configuration>
+      </plugin> -->
+      
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
-			</plugin>
+			
 			<plugin>
 				<groupId>net.masterthought</groupId>
 				<artifactId>maven-cucumber-reporting</artifactId>
@@ -78,6 +119,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
 </project>
  
